# Algebraic-Causality-Theory-ACT

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  act_core.hpp  generator.hpp  physics.hpp
